Raise Main window,Immediate logs,fixed reload profile,faster quit,cosmetic code cleanup, runtime error on tooltips preference change,don't save chains everytime.

--- a/.settings
+++ b/.settings
@@ -31,6 +31,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/Arrange]
 Geometry=[0,40,301,301]
 
+[DebugWindow/AudioChainBox.Children]
+Geometry=[52,0,210,210]
+
 [DebugWindow/Audiotag]
 Geometry=[0,0,520,375]
 
@@ -421,6 +424,12 @@ Geometry=[0,0,344,344]
 [DebugWindow/Triples]
 Geometry=[0,0,1187,344]
 
+[DebugWindow/VideoChainBox]
+Geometry=[52,0,210,831]
+
+[DebugWindow/VideoChainBox.Children]
+Geometry=[52,0,210,210]
+
 [DebugWindow/Youtube.AvailableSubs(VideoId)]
 Geometry=[0,0,344,344]
 
@@ -686,36 +695,59 @@ SearchString=True
 
 [OpenFile]
 Active=1
-File[1]="AA_ToDo:119.0"
+File[1]="AA_ToDo:55.0"
 File[2]=".src/Form/XConfigureVideoDriver.form"
 File[3]=".src/Form/XConfigureAudioDriver.form"
-File[4]="AA_CHANGELOG:0.0"
-File[5]=".src/Form/FMain.form"
-File[6]=".src/Form/FMain.class:4964.21"
-File[7]=".src/Classi/StartClass.class:4.3"
-File[8]=".src/Form/zzzFake.class:23.3"
-File[9]=".src/Classi/SettingsClass.class:619.24"
-File[10]=".src/Form/GeneralOptions.form"
-File[11]=".src/0_Moduli/Global.module:852.29"
-File[12]=".src/Form/GeneralOptions.class:547.29"
-File[13]=".src/Form/DVBTuner.class:0.0"
-File[14]=".src/Form/Chains.form"
-File[15]=".src/Form/Chains.class:383.48"
-File[16]=".src/Form/AllOptions.form"
-File[17]=".src/Form/AllOptions.class:48.2"
-File[18]=".src/Classi/MplayerClass.class:1293.48"
-File[19]=".src/Classi/PlaylistClass.class:36.27"
-File[20]=".src/Classi/Meters.class:23.0"
-File[21]=".src/Form/XConfigureAudioDriver.class:246.32"
-File[22]=".src/Form/AudioVideoCodecs.form"
-File[23]=".src/Form/AudioVideoCodecs.class:12.34"
-File[24]=".src/Form/XConfigureVideoDriver.class:316.46"
-File[25]=".src/Form/VFiltersCfg.form"
-File[26]=".src/Form/VFiltersCfg.class:113.0"
-File[27]=".src/Form/AFiltersCfg.class:478.4"
-File[28]=".src/Classi/DynaGuiClass.class:264.8"
-File[29]=".src/Form/MyQuestion.class:38.0"
-Count=29
+File[4]=".src/Form/FMain.form"
+File[5]=".src/Form/FMain.class:204.28"
+File[6]=".src/Classi/StartClass.class:4.3"
+File[7]=".src/Form/zzzFake.class:4.0"
+File[8]=".src/Classi/SettingsClass.class:335.2"
+File[9]=".src/Form/GeneralOptions.form"
+File[10]=".src/0_Moduli/Global.module:404.32"
+File[11]=".src/Form/GeneralOptions.class:876.0"
+File[12]=".src/Form/DVBTuner.class:357.0"
+File[13]=".src/Form/Chains.form"
+File[14]=".src/Form/Chains.class:111.27"
+File[15]=".src/Form/AllOptions.form"
+File[16]=".src/Form/AllOptions.class:7.0"
+File[17]=".src/Classi/MplayerClass.class:538.29"
+File[18]=".src/Classi/PlaylistClass.class:36.27"
+File[19]=".src/Classi/Meters.class:23.0"
+File[20]=".src/Form/XConfigureAudioDriver.class:236.69"
+File[21]=".src/Form/AudioVideoCodecs.form"
+File[22]=".src/Form/AudioVideoCodecs.class:146.27"
+File[23]=".src/Form/XConfigureVideoDriver.class:264.0"
+File[24]=".src/Form/VFiltersCfg.form"
+File[25]=".src/Form/VFiltersCfg.class:113.0"
+File[26]=".src/Form/AFiltersCfg.class:460.0"
+File[27]=".src/Classi/DynaGuiClass.class:264.8"
+File[28]=".src/Form/MyQuestion.class:89.0"
+File[29]=".src/Form/DVBTuner.form"
+File[30]=".src/Form/LogWindow.form"
+File[31]=".src/Form/LogWindow.class:38.19"
+File[32]=".src/Form/AddUriForm.class:0.0"
+File[33]=".src/Form/AskName.class:6.0"
+File[34]=".src/Form/AudioEqualizer.class:0.0"
+File[35]=".src/Form/AudioForm.class:118.0"
+File[36]=".src/Form/ChooseAspect.class:36.12"
+File[37]=".src/Form/CountDown.class:21.0"
+File[38]=".src/Form/CoverManager.class:235.0"
+File[39]=".src/Form/HotKeyGrab.class:0.0"
+File[40]=".src/Form/HotKeys.class:0.0"
+File[41]=".src/Form/MyAskName.class:0.0"
+File[42]=".src/Form/OverlayTip.class:9.0"
+File[43]=".src/Form/OverlayTrayTip.class:77.0"
+File[44]=".src/Form/ProfileManager.class:65.56"
+File[45]=".src/Form/RealtimeForm.class:41.0"
+File[46]=".src/Form/Searchfields.class:1.0"
+File[47]=".src/Form/ServiceForm.class:14.24"
+File[48]=".src/Form/SubAndOsd.class:393.0"
+File[49]=".src/Form/TextDialog.class:18.0"
+File[50]=".src/Form/TranslationNeeded.class:59.0"
+File[51]=".src/Form/VideoEqualizer.class:71.0"
+File[52]=".src/Form/Xt7Egg.class:0.0"
+Count=52
 
 [Watches]
 Count=11
