Avodid displaying the cover twice on start

--- a/.project
+++ b/.project
@@ -18,6 +18,7 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
+Arguments="/mnt/nas.crypt/Musica/streamripper/radioparallax/Cirdan - Red Sector - Theme.mp3"
 TabSize=2
 Translate=1
 Language=en
