--- a/.settings
+++ b/.settings
@@ -246,7 +246,7 @@ Geometry=[0,369,1120,344]
 Geometry=[0,0,301,301]
 
 [DebugWindow/Object]
-Geometry=[0,0,301,301]
+Geometry=[52,0,301,301]
 
 [DebugWindow/Option]
 Geometry=[0,41,344,344]
@@ -399,7 +399,7 @@ Geometry=[691,104,506,663]
 Geometry=[52,0,344,344]
 
 [DebugWindow/TheObject]
-Geometry=[52,0,344,344]
+Geometry=[860,472,344,444]
 
 [DebugWindow/TheObject.layout]
 Geometry=[-4,-3,210,210]
@@ -708,18 +708,22 @@ File[7]=".src/Form/CoverManager.class:162.92"
 File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:72.8"
+File[11]="AA_ToDo:58.0"
 Active=12
-File[12]="CHANGELOG_GIT:4.57"
-File[13]=".src/0_Moduli/Global.module:429.6"
-File[14]=".src/Form/Chains.class:302.0"
-File[15]=".src/Classi/SettingsClass.class:616.28"
+File[12]="CHANGELOG_GIT:4.43"
+File[13]=".src/0_Moduli/Global.module:597.24"
+File[14]=".src/Form/Chains.class:7.40"
+File[15]=".src/Classi/SettingsClass.class:660.25"
 File[16]=".src/Form/Chains.form"
 File[17]=".src/Form/HotKeys.class:369.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
 File[19]=".src/Classi/FlashClass.class:79.33"
 File[20]=".src/Form/GeneralOptions.class:443.28"
-Count=20
+File[21]=".src/Form/XConfigureAudioDriver.form"
+File[22]=".src/Form/AudioVideoCodecs.form"
+File[23]=".src/Form/VFiltersCfg.form"
+File[24]=".src/Form/VFiltersCfg.class:245.16"
+Count=24
 
 [Watches]
 Count=11
