Copy factory settings to default profile if no previous configuration was found

--- a/.settings
+++ b/.settings
@@ -1,7 +1,7 @@
 [Breakpoints]
-Breakpoint[1]="FMain.5156"
-Breakpoint[2]="FMain.5175"
-Breakpoint[3]="FMain.5177"
+Breakpoint[1]="FMain.5165"
+Breakpoint[2]="FMain.5184"
+Breakpoint[3]="FMain.5186"
 Count=3
 
 [DebugWindow]
@@ -698,19 +698,19 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:2536.12"
+File[2]=".src/Form/FMain.class:1246.2"
 File[3]=".src/Form/zzzFake.class:22.0"
-File[4]=".src/Classi/MplayerClass.class:289.10"
+File[4]=".src/Classi/MplayerClass.class:414.0"
 File[5]=".src/Form/AudioForm.class:88.0"
 File[6]=".src/Classi/Meters.class:64.0"
 File[7]=".src/Form/CoverManager.class:162.92"
 File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:63.0"
+File[11]="AA_ToDo:63.83"
 Active=12
-File[12]="CHANGELOG_GIT:9.10"
-File[13]=".src/0_Moduli/Global.module:597.24"
+File[12]="CHANGELOG_GIT:12.10"
+File[13]=".src/0_Moduli/Global.module:324.11"
 File[14]=".src/Form/Chains.class:7.40"
 File[15]=".src/Classi/SettingsClass.class:660.25"
 File[16]=".src/Form/Chains.form"
@@ -721,8 +721,9 @@ File[20]=".src/Form/GeneralOptions.class:443.28"
 File[21]=".src/Form/XConfigureAudioDriver.form"
 File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
-File[24]=".src/Form/VFiltersCfg.class:245.16"
-Count=24
+File[24]=".src/Form/VFiltersCfg.class:578.0"
+File[25]=".src/Form/GeneralOptions.form"
+Count=25
 
 [Watches]
 Count=11
