Removed some wrong tooltips messages

--- a/.settings
+++ b/.settings
@@ -709,7 +709,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:63.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.2"
+File[12]="CHANGELOG_GIT:3.5"
 File[13]=".src/0_Moduli/Global.module:324.11"
 File[14]=".src/Form/Chains.class:7.40"
 File[15]=".src/Classi/SettingsClass.class:660.25"
@@ -723,7 +723,8 @@ File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
 File[24]=".src/Form/VFiltersCfg.class:578.0"
 File[25]=".src/Form/GeneralOptions.form"
-Count=25
+File[26]=".src/Form/RealtimeForm.form"
+Count=26
 
 [Watches]
 Count=11
