--- a/.settings
+++ b/.settings
@@ -2,7 +2,8 @@
 Breakpoint[1]="FMain.5164"
 Breakpoint[2]="FMain.5183"
 Breakpoint[3]="FMain.5185"
-Count=3
+Breakpoint[4]="FMain.7391"
+Count=4
 
 [DebugWindow]
 Count=0
@@ -698,8 +699,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-Active=2
-File[2]=".src/Form/FMain.class:5783.32"
+File[2]=".src/Form/FMain.class:7632.0"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:414.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -708,17 +708,18 @@ File[7]=".src/Form/CoverManager.class:162.92"
 File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:63.0"
+File[11]="AA_ToDo:64.41"
 File[12]="CHANGELOG_GIT:10.35"
 File[13]=".src/0_Moduli/Global.module:324.11"
 File[14]=".src/Form/Chains.class:7.40"
-File[15]=".src/Classi/SettingsClass.class:136.25"
+File[15]=".src/Classi/SettingsClass.class:209.40"
 File[16]=".src/Form/Chains.form"
 File[17]=".src/Form/HotKeys.class:369.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
 File[19]=".src/Classi/FlashClass.class:79.33"
 File[20]=".src/Form/GeneralOptions.class:840.37"
 File[21]=".src/Form/XConfigureAudioDriver.form"
+Active=22
 File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
 File[24]=".src/Form/VFiltersCfg.class:578.0"
