--- a/.settings
+++ b/.settings
@@ -2,7 +2,7 @@
 Breakpoint[1]="FMain.5164"
 Breakpoint[2]="FMain.5183"
 Breakpoint[3]="FMain.5185"
-Breakpoint[4]="FMain.7391"
+Breakpoint[4]="FMain.7392"
 Count=4
 
 [DebugWindow]
@@ -699,7 +699,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:2336.42"
+File[2]=".src/Form/FMain.class:5798.44"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:414.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -710,7 +710,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:59.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.94"
+File[12]="CHANGELOG_GIT:3.71"
 File[13]=".src/0_Moduli/Global.module:324.11"
 File[14]=".src/Form/Chains.class:7.40"
 File[15]=".src/Classi/SettingsClass.class:209.40"
@@ -725,7 +725,8 @@ File[23]=".src/Form/VFiltersCfg.form"
 File[24]=".src/Form/VFiltersCfg.class:578.0"
 File[25]=".src/Form/GeneralOptions.form"
 File[26]=".src/Form/RealtimeForm.form"
-Count=26
+File[27]=".src/Classi/YoutubeClass.class:448.17"
+Count=27
 
 [Watches]
 Count=11
