FIX: Don't exit from fullscreen mode in playlisting mode.

--- a/.settings
+++ b/.settings
@@ -1,8 +1,8 @@
 [Breakpoints]
-Breakpoint[1]="FMain.5164"
-Breakpoint[2]="FMain.5183"
-Breakpoint[3]="FMain.5185"
-Breakpoint[4]="FMain.7392"
+Breakpoint[1]="FMain.5163"
+Breakpoint[2]="FMain.5182"
+Breakpoint[3]="FMain.5184"
+Breakpoint[4]="FMain.7391"
 Count=4
 
 [DebugWindow]
@@ -699,7 +699,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:5798.44"
+File[2]=".src/Form/FMain.class:2736.12"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:414.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -708,9 +708,9 @@ File[7]=".src/Form/CoverManager.class:162.92"
 File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:59.0"
+File[11]="AA_ToDo:72.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.71"
+File[12]="CHANGELOG_GIT:4.0"
 File[13]=".src/0_Moduli/Global.module:324.11"
 File[14]=".src/Form/Chains.class:7.40"
 File[15]=".src/Classi/SettingsClass.class:209.40"
@@ -726,7 +726,8 @@ File[24]=".src/Form/VFiltersCfg.class:578.0"
 File[25]=".src/Form/GeneralOptions.form"
 File[26]=".src/Form/RealtimeForm.form"
 File[27]=".src/Classi/YoutubeClass.class:448.17"
-Count=27
+File[28]=".src/Form/DVBTuner.form"
+Count=28
 
 [Watches]
 Count=11
