FIX: Notify user to apply new settings for remaining generaloptions settings

--- a/.settings
+++ b/.settings
@@ -699,7 +699,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:2736.12"
+File[2]=".src/Form/FMain.class:2720.0"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:414.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -708,17 +708,17 @@ File[7]=".src/Form/CoverManager.class:162.92"
 File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:72.0"
-Active=12
+Active=11
+File[11]="AA_ToDo:67.0"
 File[12]="CHANGELOG_GIT:4.0"
-File[13]=".src/0_Moduli/Global.module:324.11"
+File[13]=".src/0_Moduli/Global.module:892.0"
 File[14]=".src/Form/Chains.class:7.40"
 File[15]=".src/Classi/SettingsClass.class:209.40"
 File[16]=".src/Form/Chains.form"
 File[17]=".src/Form/HotKeys.class:369.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
 File[19]=".src/Classi/FlashClass.class:79.33"
-File[20]=".src/Form/GeneralOptions.class:840.37"
+File[20]=".src/Form/GeneralOptions.class:883.35"
 File[21]=".src/Form/XConfigureAudioDriver.form"
 File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
@@ -727,7 +727,8 @@ File[25]=".src/Form/GeneralOptions.form"
 File[26]=".src/Form/RealtimeForm.form"
 File[27]=".src/Classi/YoutubeClass.class:448.17"
 File[28]=".src/Form/DVBTuner.form"
-Count=28
+File[29]=".src/Form/AudioVideoCodecs.class:151.25"
+Count=29
 
 [Watches]
 Count=11
