FIX:    When hitting "Use" button, apply settings in other forms too.

--- a/.settings
+++ b/.settings
@@ -1,8 +1,8 @@
 [Breakpoints]
-Breakpoint[1]="FMain.5163"
-Breakpoint[2]="FMain.5182"
-Breakpoint[3]="FMain.5184"
-Breakpoint[4]="FMain.7391"
+Breakpoint[1]="FMain.5173"
+Breakpoint[2]="FMain.5192"
+Breakpoint[3]="FMain.5194"
+Breakpoint[4]="FMain.7401"
 Count=4
 
 [DebugWindow]
@@ -699,7 +699,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:1577.57"
+File[2]=".src/Form/FMain.class:1569.28"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:414.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -708,28 +708,46 @@ File[7]=".src/Form/CoverManager.class:162.92"
 File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:63.0"
+File[11]="AA_ToDo:61.0"
 Active=12
-File[12]="CHANGELOG_GIT:4.2"
-File[13]=".src/0_Moduli/Global.module:892.0"
-File[14]=".src/Form/Chains.class:232.56"
+File[12]="CHANGELOG_GIT:5.0"
+File[13]=".src/0_Moduli/Global.module:462.70"
+File[14]=".src/Form/Chains.class:276.8"
 File[15]=".src/Classi/SettingsClass.class:209.40"
 File[16]=".src/Form/Chains.form"
-File[17]=".src/Form/HotKeys.class:369.28"
+File[17]=".src/Form/HotKeys.class:264.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
 File[19]=".src/Classi/FlashClass.class:79.33"
-File[20]=".src/Form/GeneralOptions.class:378.13"
+File[20]=".src/Form/GeneralOptions.class:372.13"
 File[21]=".src/Form/XConfigureAudioDriver.form"
 File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
-File[24]=".src/Form/VFiltersCfg.class:578.0"
+File[24]=".src/Form/VFiltersCfg.class:528.22"
 File[25]=".src/Form/GeneralOptions.form"
 File[26]=".src/Form/RealtimeForm.form"
 File[27]=".src/Classi/YoutubeClass.class:448.17"
 File[28]=".src/Form/DVBTuner.form"
-File[29]=".src/Form/AudioVideoCodecs.class:151.25"
-File[30]=".src/Form/SubAndOsd.class:14.2"
-Count=30
+File[29]=".src/Form/AudioVideoCodecs.class:34.28"
+File[30]=".src/Form/SubAndOsd.class:291.28"
+File[31]=".src/Form/AllOptions.form"
+File[32]=".src/Form/HotKeys.form"
+File[33]=".src/Form/SubAndOsd.form"
+File[34]=".src/Form/VideoEqualizer.class:33.28"
+File[35]=".src/Form/VideoEqualizer.form"
+File[36]=".src/Form/AFiltersCfg.form"
+File[37]=".src/Form/AFiltersCfg.class:364.20"
+File[38]=".src/Form/AudioEqualizer.form"
+File[39]=".src/Form/ChooseAspect.form"
+File[40]=".src/Form/CountDown.form"
+File[41]=".src/Form/HotKeyGrab.form"
+File[42]=".src/Form/LogWindow.form"
+File[43]=".src/Form/ProfileManager.form"
+File[44]=".src/Form/Searchfields.form"
+File[45]=".src/Form/ServiceForm.form"
+File[46]=".src/Form/XConfigureAudioDriver.class:19.0"
+File[47]=".src/Form/XConfigureVideoDriver.form"
+File[48]=".src/Form/XConfigureVideoDriver.class:19.21"
+Count=48
 
 [Watches]
 Count=11
