--- a/.settings
+++ b/.settings
@@ -702,7 +702,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:1569.30"
+File[2]=".src/Form/FMain.class:6117.32"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:873.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -712,7 +712,6 @@ File[8]=".src/Form/FMain.form"
 File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
-Active=12
 File[12]="CHANGELOG_GIT:15.50"
 File[13]=".src/0_Moduli/Global.module:333.8"
 File[14]=".src/Form/Chains.class:76.25"
@@ -750,7 +749,9 @@ File[45]=".src/Form/ServiceForm.form"
 File[46]=".src/Form/XConfigureAudioDriver.class:110.0"
 File[47]=".src/Form/XConfigureVideoDriver.form"
 File[48]=".src/Form/XConfigureVideoDriver.class:19.21"
-Count=48
+Active=49
+File[49]=".src/Classi/ShoutCastClass.class:105.52"
+Count=49
 
 [Watches]
 Count=11
