Enable Tag editor button when selecting an item from library/playlist or browse

--- a/.settings
+++ b/.settings
@@ -1,8 +1,8 @@
 [Breakpoints]
-Breakpoint[1]="FMain.5172"
-Breakpoint[2]="FMain.5191"
-Breakpoint[3]="FMain.5193"
-Breakpoint[4]="FMain.7400"
+Breakpoint[1]="FMain.5175"
+Breakpoint[2]="FMain.5194"
+Breakpoint[3]="FMain.5196"
+Breakpoint[4]="FMain.7403"
 Count=4
 
 [DebugWindow]
@@ -708,7 +708,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:6117.32"
+File[2]=".src/Form/FMain.class:4420.14"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:873.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -719,7 +719,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
 Active=12
-File[12]="CHANGELOG_GIT:4.44"
+File[12]="CHANGELOG_GIT:3.2"
 File[13]=".src/0_Moduli/Global.module:895.0"
 File[14]=".src/Form/Chains.class:76.25"
 File[15]=".src/Classi/SettingsClass.class:363.0"
@@ -759,7 +759,8 @@ File[48]=".src/Form/XConfigureVideoDriver.class:19.21"
 File[49]=".src/Classi/ShoutCastClass.class:118.60"
 File[50]=".src/Form/LogWindow.class:82.31"
 File[51]=".src/Form/TextDialog.form"
-Count=51
+File[52]=".src/Classi/DbusProperties.class:7.0"
+Count=52
 
 [Watches]
 Count=11
