--- a/.settings
+++ b/.settings
@@ -1,8 +1,8 @@
 [Breakpoints]
-Breakpoint[1]="FMain.5175"
-Breakpoint[2]="FMain.5194"
-Breakpoint[3]="FMain.5196"
-Breakpoint[4]="FMain.7403"
+Breakpoint[1]="FMain.5178"
+Breakpoint[2]="FMain.5197"
+Breakpoint[3]="FMain.5199"
+Breakpoint[4]="FMain.7406"
 Count=4
 
 [DebugWindow]
@@ -130,6 +130,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/FilterList[i]]
 Geometry=[0,0,344,344]
+
+[DebugWindow/Filterlist]
+Geometry=[-4,-3,210,210]
 
 [DebugWindow/GeneralOptions]
 Geometry=[0,41,344,344]
@@ -653,6 +656,9 @@ Geometry=[0,0,210,210]
 [DebugWindow/subsettings]
 Geometry=[0,0,210,210]
 
+[DebugWindow/tabstrip1]
+Geometry=[-4,-3,210,210]
+
 [DebugWindow/theform.Controls]
 Geometry=[-4,-3,210,655]
 
@@ -708,9 +714,9 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:4420.14"
+File[2]=".src/Form/FMain.class:5054.39"
 File[3]=".src/Form/zzzFake.class:22.0"
-File[4]=".src/Classi/MplayerClass.class:873.0"
+File[4]=".src/Classi/MplayerClass.class:375.0"
 File[5]=".src/Form/AudioForm.class:88.0"
 File[6]=".src/Classi/Meters.class:64.0"
 File[7]=".src/Form/CoverManager.class:162.92"
@@ -719,14 +725,14 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.2"
-File[13]=".src/0_Moduli/Global.module:895.0"
+File[12]="CHANGELOG_GIT:3.10"
+File[13]=".src/0_Moduli/Global.module:539.0"
 File[14]=".src/Form/Chains.class:76.25"
 File[15]=".src/Classi/SettingsClass.class:363.0"
 File[16]=".src/Form/Chains.form"
 File[17]=".src/Form/HotKeys.class:264.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
-File[19]=".src/Classi/FlashClass.class:79.33"
+File[19]=".src/Classi/FlashClass.class:137.17"
 File[20]=".src/Form/GeneralOptions.class:897.43"
 File[21]=".src/Form/XConfigureAudioDriver.form"
 File[22]=".src/Form/AudioVideoCodecs.form"
@@ -744,7 +750,7 @@ File[33]=".src/Form/SubAndOsd.form"
 File[34]=".src/Form/VideoEqualizer.class:33.28"
 File[35]=".src/Form/VideoEqualizer.form"
 File[36]=".src/Form/AFiltersCfg.form"
-File[37]=".src/Form/AFiltersCfg.class:364.2"
+File[37]=".src/Form/AFiltersCfg.class:220.41"
 File[38]=".src/Form/AudioEqualizer.form"
 File[39]=".src/Form/ChooseAspect.form"
 File[40]=".src/Form/CountDown.form"
