--- a/.settings
+++ b/.settings
@@ -714,9 +714,9 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:5054.39"
+File[2]=".src/Form/FMain.class:9.2"
 File[3]=".src/Form/zzzFake.class:22.0"
-File[4]=".src/Classi/MplayerClass.class:375.0"
+File[4]=".src/Classi/MplayerClass.class:570.0"
 File[5]=".src/Form/AudioForm.class:88.0"
 File[6]=".src/Classi/Meters.class:64.0"
 File[7]=".src/Form/CoverManager.class:162.92"
@@ -725,7 +725,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.10"
+File[12]="CHANGELOG_GIT:10.24"
 File[13]=".src/0_Moduli/Global.module:539.0"
 File[14]=".src/Form/Chains.class:76.25"
 File[15]=".src/Classi/SettingsClass.class:363.0"
@@ -766,7 +766,8 @@ File[49]=".src/Classi/ShoutCastClass.class:118.60"
 File[50]=".src/Form/LogWindow.class:82.31"
 File[51]=".src/Form/TextDialog.form"
 File[52]=".src/Classi/DbusProperties.class:7.0"
-Count=52
+File[53]=".src/Classi/PlaylistClass.class:39.108"
+Count=53
 
 [Watches]
 Count=11
