Avoid to init forms twice

--- a/.settings
+++ b/.settings
@@ -725,7 +725,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.42"
+File[12]="CHANGELOG_GIT:3.35"
 File[13]=".src/0_Moduli/Global.module:70.256"
 File[14]=".src/Form/Chains.class:76.25"
 File[15]=".src/Classi/SettingsClass.class:363.0"
@@ -733,11 +733,11 @@ File[16]=".src/Form/Chains.form"
 File[17]=".src/Form/HotKeys.class:264.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
 File[19]=".src/Classi/FlashClass.class:137.17"
-File[20]=".src/Form/GeneralOptions.class:897.43"
+File[20]=".src/Form/GeneralOptions.class:86.43"
 File[21]=".src/Form/XConfigureAudioDriver.form"
 File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
-File[24]=".src/Form/VFiltersCfg.class:535.2"
+File[24]=".src/Form/VFiltersCfg.class:434.1"
 File[25]=".src/Form/GeneralOptions.form"
 File[26]=".src/Form/RealtimeForm.form"
 File[27]=".src/Classi/YoutubeClass.class:448.17"
@@ -750,7 +750,7 @@ File[33]=".src/Form/SubAndOsd.form"
 File[34]=".src/Form/VideoEqualizer.class:33.28"
 File[35]=".src/Form/VideoEqualizer.form"
 File[36]=".src/Form/AFiltersCfg.form"
-File[37]=".src/Form/AFiltersCfg.class:220.41"
+File[37]=".src/Form/AFiltersCfg.class:178.2"
 File[38]=".src/Form/AudioEqualizer.form"
 File[39]=".src/Form/ChooseAspect.form"
 File[40]=".src/Form/CountDown.form"
@@ -769,7 +769,9 @@ File[52]=".src/Classi/DbusProperties.class:7.0"
 File[53]=".src/Classi/PlaylistClass.class:39.108"
 File[54]=".src/Form/MyQuestion.class:62.4"
 File[55]=".src/Form/MyQuestion.form"
-Count=55
+File[56]=".src/Form/AddUriForm.form"
+File[57]="amarok_random.png"
+Count=57
 
 [Watches]
 Count=11
