Adjusted margins,spacings,paddings and so on...

--- a/.settings
+++ b/.settings
@@ -714,7 +714,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:2896.16"
+File[2]=".src/Form/FMain.class:212.16"
 File[3]=".src/Form/zzzFake.class:22.0"
 File[4]=".src/Classi/MplayerClass.class:570.0"
 File[5]=".src/Form/AudioForm.class:88.0"
@@ -725,7 +725,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.10"
+File[12]="CHANGELOG_GIT:3.2"
 File[13]=".src/0_Moduli/Global.module:70.256"
 File[14]=".src/Form/Chains.class:76.25"
 File[15]=".src/Classi/SettingsClass.class:363.0"
@@ -733,7 +733,7 @@ File[16]=".src/Form/Chains.form"
 File[17]=".src/Form/HotKeys.class:264.28"
 File[18]=".src/0_Moduli/ComboHistory.module:53.28"
 File[19]=".src/Classi/FlashClass.class:137.17"
-File[20]=".src/Form/GeneralOptions.class:86.43"
+File[20]=".src/Form/GeneralOptions.class:414.43"
 File[21]=".src/Form/XConfigureAudioDriver.form"
 File[22]=".src/Form/AudioVideoCodecs.form"
 File[23]=".src/Form/VFiltersCfg.form"
@@ -743,7 +743,7 @@ File[26]=".src/Form/RealtimeForm.form"
 File[27]=".src/Classi/YoutubeClass.class:448.17"
 File[28]=".src/Form/DVBTuner.form"
 File[29]=".src/Form/AudioVideoCodecs.class:167.29"
-File[30]=".src/Form/SubAndOsd.class:317.2"
+File[30]=".src/Form/SubAndOsd.class:84.2"
 File[31]=".src/Form/AllOptions.form"
 File[32]=".src/Form/HotKeys.form"
 File[33]=".src/Form/SubAndOsd.form"
@@ -771,7 +771,9 @@ File[54]=".src/Form/MyQuestion.class:62.4"
 File[55]=".src/Form/MyQuestion.form"
 File[56]=".src/Form/AddUriForm.form"
 File[57]="amarok_random.png"
-Count=57
+File[58]=".src/Form/AskName.form"
+File[59]=".src/Form/TranslationNeeded.form"
+Count=59
 
 [Watches]
 Count=11
