Use a method to iconify the main form that doesn't break playlisting.

--- a/.settings
+++ b/.settings
@@ -2,7 +2,7 @@
 Breakpoint[1]="FMain.5178"
 Breakpoint[2]="FMain.5197"
 Breakpoint[3]="FMain.5199"
-Breakpoint[4]="FMain.7406"
+Breakpoint[4]="FMain.7413"
 Count=4
 
 [DebugWindow]
@@ -256,6 +256,9 @@ Geometry=[0,0,301,301]
 
 [DebugWindow/Object]
 Geometry=[52,0,301,301]
+
+[DebugWindow/OneSecTimer]
+Geometry=[-4,-3,210,210]
 
 [DebugWindow/Option]
 Geometry=[0,41,344,344]
@@ -714,9 +717,9 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:212.16"
+File[2]=".src/Form/FMain.class:3616.0"
 File[3]=".src/Form/zzzFake.class:22.0"
-File[4]=".src/Classi/MplayerClass.class:570.0"
+File[4]=".src/Classi/MplayerClass.class:873.0"
 File[5]=".src/Form/AudioForm.class:88.0"
 File[6]=".src/Classi/Meters.class:64.0"
 File[7]=".src/Form/CoverManager.class:162.92"
@@ -725,7 +728,7 @@ File[9]=".src/Form/CoverManager.form"
 File[10]=".src/Form/AudioForm.form"
 File[11]="AA_ToDo:52.0"
 Active=12
-File[12]="CHANGELOG_GIT:3.2"
+File[12]="CHANGELOG_GIT:3.0"
 File[13]=".src/0_Moduli/Global.module:70.256"
 File[14]=".src/Form/Chains.class:76.25"
 File[15]=".src/Classi/SettingsClass.class:363.0"
@@ -766,7 +769,7 @@ File[49]=".src/Classi/ShoutCastClass.class:118.60"
 File[50]=".src/Form/LogWindow.class:82.31"
 File[51]=".src/Form/TextDialog.form"
 File[52]=".src/Classi/DbusProperties.class:7.0"
-File[53]=".src/Classi/PlaylistClass.class:39.108"
+File[53]=".src/Classi/PlaylistClass.class:505.79"
 File[54]=".src/Form/MyQuestion.class:62.4"
 File[55]=".src/Form/MyQuestion.form"
 File[56]=".src/Form/AddUriForm.form"
