Avoid to "TRY" to register to dbus twice

--- a/.settings
+++ b/.settings
@@ -1,8 +1,8 @@
 [Breakpoints]
-Breakpoint[1]="FMain.5182"
-Breakpoint[2]="FMain.5201"
-Breakpoint[3]="FMain.5203"
-Breakpoint[4]="FMain.7417"
+Breakpoint[1]="FMain.5187"
+Breakpoint[2]="FMain.5206"
+Breakpoint[3]="FMain.5208"
+Breakpoint[4]="FMain.7422"
 Count=4
 
 [DebugWindow]
@@ -193,6 +193,9 @@ Geometry=[0,0,344,344]
 
 [DebugWindow/Last]
 Geometry=[52,0,210,210]
+
+[DebugWindow/LastObj]
+Geometry=[-4,-3,210,210]
 
 [DebugWindow/Leftsidetabs]
 Geometry=[0,0,344,344]
@@ -716,67 +719,14 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]=".src/Classi/StartClass.class:4.3"
-File[2]=".src/Form/FMain.class:2038.30"
-File[3]=".src/Form/zzzFake.class:22.0"
-File[4]=".src/Classi/MplayerClass.class:873.0"
-File[5]=".src/Form/AudioForm.class:88.0"
-File[6]=".src/Classi/Meters.class:64.0"
-File[7]=".src/Form/CoverManager.class:162.92"
-File[8]=".src/Form/FMain.form"
-File[9]=".src/Form/CoverManager.form"
-File[10]=".src/Form/AudioForm.form"
-File[11]="AA_ToDo:52.0"
-Active=12
-File[12]="CHANGELOG_GIT:15.0"
-File[13]=".src/0_Moduli/Global.module:70.256"
-File[14]=".src/Form/Chains.class:76.25"
-File[15]=".src/Classi/SettingsClass.class:363.0"
-File[16]=".src/Form/Chains.form"
-File[17]=".src/Form/HotKeys.class:264.28"
-File[18]=".src/0_Moduli/ComboHistory.module:53.28"
-File[19]=".src/Classi/FlashClass.class:137.17"
-File[20]=".src/Form/GeneralOptions.class:414.43"
-File[21]=".src/Form/XConfigureAudioDriver.form"
-File[22]=".src/Form/AudioVideoCodecs.form"
-File[23]=".src/Form/VFiltersCfg.form"
-File[24]=".src/Form/VFiltersCfg.class:434.1"
-File[25]=".src/Form/GeneralOptions.form"
-File[26]=".src/Form/RealtimeForm.form"
-File[27]=".src/Classi/YoutubeClass.class:448.17"
-File[28]=".src/Form/DVBTuner.form"
-File[29]=".src/Form/AudioVideoCodecs.class:167.29"
-File[30]=".src/Form/SubAndOsd.class:84.2"
-File[31]=".src/Form/AllOptions.form"
-File[32]=".src/Form/HotKeys.form"
-File[33]=".src/Form/SubAndOsd.form"
-File[34]=".src/Form/VideoEqualizer.class:33.28"
-File[35]=".src/Form/VideoEqualizer.form"
-File[36]=".src/Form/AFiltersCfg.form"
-File[37]=".src/Form/AFiltersCfg.class:178.2"
-File[38]=".src/Form/AudioEqualizer.form"
-File[39]=".src/Form/ChooseAspect.form"
-File[40]=".src/Form/CountDown.form"
-File[41]=".src/Form/HotKeyGrab.form"
-File[42]=".src/Form/LogWindow.form"
-File[43]=".src/Form/ProfileManager.form"
-File[44]=".src/Form/Searchfields.form"
-File[45]=".src/Form/ServiceForm.form"
-File[46]=".src/Form/XConfigureAudioDriver.class:110.0"
-File[47]=".src/Form/XConfigureVideoDriver.form"
-File[48]=".src/Form/XConfigureVideoDriver.class:19.21"
-File[49]=".src/Classi/ShoutCastClass.class:118.60"
-File[50]=".src/Form/LogWindow.class:82.31"
-File[51]=".src/Form/TextDialog.form"
-File[52]=".src/Classi/DbusProperties.class:7.0"
-File[53]=".src/Classi/PlaylistClass.class:505.79"
-File[54]=".src/Form/MyQuestion.class:62.4"
-File[55]=".src/Form/MyQuestion.form"
-File[56]=".src/Form/AddUriForm.form"
-File[57]="amarok_random.png"
-File[58]=".src/Form/AskName.form"
-File[59]=".src/Form/TranslationNeeded.form"
-Count=59
+File[1]=".src/Form/GeneralOptions.form"
+File[2]=".src/Form/GeneralOptions.class:892.17"
+File[3]=".src/0_Moduli/Global.module:869.3"
+File[4]="AA_ToDo:64.9"
+File[5]=".src/Form/FMain.class:1953.23"
+Active=6
+File[6]="CHANGELOG_GIT:5.11"
+Count=6
 
 [Watches]
 Count=11
