--- a/.settings
+++ b/.settings
@@ -721,9 +721,10 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
 File[1]=".src/Form/XConfigureAudioDriver.form"
-Count=1
+Active=2
+File[2]=".src/Form/XConfigureAudioDriver.class:293.0"
+Count=2
 
 [Watches]
 Count=11
