--- a/.settings
+++ b/.settings
@@ -1,10 +1,10 @@
 [Breakpoints]
-Breakpoint[1]="FMain.4893"
-Breakpoint[2]="FMain.4903"
-Breakpoint[3]="FMain.5187"
-Breakpoint[4]="FMain.5206"
-Breakpoint[5]="FMain.5208"
-Breakpoint[6]="FMain.7422"
+Breakpoint[1]="FMain.4913"
+Breakpoint[2]="FMain.4923"
+Breakpoint[3]="FMain.5207"
+Breakpoint[4]="FMain.5226"
+Breakpoint[5]="FMain.5228"
+Breakpoint[6]="FMain.7442"
 Count=6
 
 [DebugWindow]
@@ -722,9 +722,18 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Form/XConfigureAudioDriver.form"
-Active=2
-File[2]=".src/Form/XConfigureAudioDriver.class:290.3"
-Count=2
+File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
+File[3]=".src/Form/FMain.form"
+File[4]=".src/Form/FMain.class:3523.34"
+File[5]=".src/Classi/MplayerClass.class:247.38"
+File[6]=".src/Form/RealtimeForm.form"
+File[7]=".src/Form/AudioEqualizer.form"
+File[8]=".src/Form/VideoEqualizer.form"
+File[9]=".src/Form/VideoEqualizer.class:22.18"
+File[10]=".src/Form/HotKeys.form"
+Active=11
+File[11]="CHANGELOG_GIT:3.2"
+Count=11
 
 [Watches]
 Count=11
