--- a/.settings
+++ b/.settings
@@ -1,14 +1,15 @@
 [Breakpoints]
-Breakpoint[1]="FMain.4913"
-Breakpoint[2]="FMain.4923"
-Breakpoint[3]="FMain.5207"
-Breakpoint[4]="FMain.5226"
-Breakpoint[5]="FMain.5228"
-Breakpoint[6]="FMain.7442"
+Breakpoint[1]="FMain.4915"
+Breakpoint[2]="FMain.4925"
+Breakpoint[3]="FMain.5209"
+Breakpoint[4]="FMain.5228"
+Breakpoint[5]="FMain.5230"
+Breakpoint[6]="FMain.7445"
 Count=6
 
 [DebugWindow]
-Count=0
+Count=1
+DebugWindow[1]="Split(dragdata, \"\\n\\r\", \"\", True)"
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -102,6 +103,9 @@ Geometry=[0,35,344,344]
 
 [DebugWindow/Dir(devdir, cdpattern).Insert(Dir(devdir, dvdpattern))]
 Geometry=[0,41,344,344]
+
+[DebugWindow/Drag]
+Geometry=[1276,-3,210,210]
 
 [DebugWindow/DraggingRows]
 Geometry=[0,0,301,301]
@@ -331,6 +335,9 @@ Geometry=[11,111,522,603]
 [DebugWindow/SourceList]
 Geometry=[0,41,344,344]
 
+[DebugWindow/Split(dragdata, "\n\r", "", True)]
+Geometry=[1276,-3,210,210]
+
 [DebugWindow/Split(file.Load(filename), "\n", "", TRUE)]
 Geometry=[1482,250,344,344]
 
@@ -485,7 +492,7 @@ Geometry=[0,41,344,344]
 Geometry=[0,41,344,344]
 
 [DebugWindow/droppedfiles]
-Geometry=[0,212,792,344]
+Geometry=[0,212,1198,387]
 
 [DebugWindow/fields]
 Geometry=[0,0,344,344]
@@ -724,16 +731,19 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:3523.34"
+File[4]=".src/Form/FMain.class:1945.3"
 File[5]=".src/Classi/MplayerClass.class:247.38"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
 File[8]=".src/Form/VideoEqualizer.form"
-File[9]=".src/Form/VideoEqualizer.class:22.18"
+File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
 Active=11
-File[11]="CHANGELOG_GIT:3.2"
-Count=11
+File[11]="CHANGELOG_GIT:3.0"
+File[12]="AA_ToDo:394.50"
+File[13]=".src/0_Moduli/Global.module:468.7"
+File[14]=".src/Form/GeneralOptions.class:525.69"
+Count=14
 
 [Watches]
 Count=11
