Toolbar buttons are now plain buttons (still need other size fixes)

--- a/.settings
+++ b/.settings
@@ -1,10 +1,10 @@
 [Breakpoints]
-Breakpoint[1]="FMain.4919"
-Breakpoint[2]="FMain.4929"
-Breakpoint[3]="FMain.5213"
-Breakpoint[4]="FMain.5232"
-Breakpoint[5]="FMain.5234"
-Breakpoint[6]="FMain.7449"
+Breakpoint[1]="FMain.4918"
+Breakpoint[2]="FMain.4928"
+Breakpoint[3]="FMain.5212"
+Breakpoint[4]="FMain.5231"
+Breakpoint[5]="FMain.5233"
+Breakpoint[6]="FMain.7448"
 Count=6
 
 [DebugWindow]
@@ -730,7 +730,7 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:1293.35"
+File[4]=".src/Form/FMain.class:725.7"
 File[5]=".src/Classi/MplayerClass.class:247.38"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
@@ -738,13 +738,14 @@ File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
 Active=11
-File[11]="CHANGELOG_GIT:10.11"
+File[11]="CHANGELOG_GIT:3.9"
 File[12]="AA_ToDo:394.50"
 File[13]=".src/0_Moduli/Global.module:468.7"
 File[14]=".src/Form/GeneralOptions.class:525.69"
 File[15]=".src/Classi/DbusProperties.class:395.3"
 File[16]=".src/Classi/mpris.class:168.0"
-Count=16
+File[17]=".src/Form/DVBTuner.form"
+Count=17
 
 [Watches]
 Count=11
