Use x11 as default subtitle preview driver (prevent crashes on buggy catalyst drivers)

--- a/.settings
+++ b/.settings
@@ -736,7 +736,7 @@ File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
 Active=11
-File[11]="CHANGELOG_GIT:3.82"
+File[11]="CHANGELOG_GIT:3.96"
 File[12]="AA_ToDo:34.0"
 File[13]=".src/0_Moduli/Global.module:468.7"
 File[14]=".src/Form/GeneralOptions.class:65.2"
@@ -746,7 +746,9 @@ File[17]=".src/Form/DVBTuner.form"
 File[18]=".src/Form/GeneralOptions.form"
 File[19]=".src/Form/CountDown.class:24.17"
 File[20]=".src/Classi/PlaylistClass.class:1378.22"
-Count=20
+File[21]=".src/Form/SubAndOsd.form"
+File[22]=".src/Form/SubAndOsd.class:255.0"
+Count=22
 
 [Watches]
 Count=11
