--- a/.settings
+++ b/.settings
@@ -727,7 +727,6 @@ SearchString=True
 [OpenFile]
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
-Active=3
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/FMain.class:2752.28"
 File[5]=".src/Classi/MplayerClass.class:224.26"
@@ -736,7 +735,8 @@ File[7]=".src/Form/AudioEqualizer.form"
 File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
-File[11]="CHANGELOG_GIT:3.10"
+Active=11
+File[11]="CHANGELOG_GIT:3.53"
 File[12]="AA_ToDo:34.0"
 File[13]=".src/0_Moduli/Global.module:468.7"
 File[14]=".src/Form/GeneralOptions.class:65.2"
@@ -748,7 +748,9 @@ File[19]=".src/Form/CountDown.class:24.17"
 File[20]=".src/Classi/PlaylistClass.class:1378.22"
 File[21]=".src/Form/SubAndOsd.form"
 File[22]=".src/Form/SubAndOsd.class:255.0"
-Count=22
+File[23]=".src/Form/Chains.form"
+File[24]=".src/Form/Chains.class:28.2"
+Count=24
 
 [Watches]
 Count=11
