--- a/.settings
+++ b/.settings
@@ -1,5 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="FMain.7443"
+Breakpoint[1]="FMain.7507"
 Count=1
 
 [DebugWindow]
@@ -668,6 +668,9 @@ Geometry=[0,0,210,210]
 [DebugWindow/subsettings]
 Geometry=[0,0,210,210]
 
+[DebugWindow/subtitletracks]
+Geometry=[48,-4,210,210]
+
 [DebugWindow/tabstrip1]
 Geometry=[-4,-3,210,210]
 
@@ -728,15 +731,15 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:2497.22"
-File[5]=".src/Classi/MplayerClass.class:621.22"
+File[4]=".src/Form/FMain.class:1964.15"
+File[5]=".src/Classi/MplayerClass.class:1052.22"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
 File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
 Active=11
-File[11]="CHANGELOG_GIT:5.45"
+File[11]="CHANGELOG_GIT:4.0"
 File[12]="AA_ToDo:34.0"
 File[13]=".src/0_Moduli/Global.module:468.7"
 File[14]=".src/Form/GeneralOptions.class:65.2"
