--- a/.settings
+++ b/.settings
@@ -731,14 +731,14 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:1964.15"
+Active=4
+File[4]=".src/Form/FMain.class:7791.0"
 File[5]=".src/Classi/MplayerClass.class:1052.22"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
 File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
-Active=11
 File[11]="CHANGELOG_GIT:4.0"
 File[12]="AA_ToDo:34.0"
 File[13]=".src/0_Moduli/Global.module:468.7"
@@ -753,7 +753,8 @@ File[21]=".src/Form/SubAndOsd.form"
 File[22]=".src/Form/SubAndOsd.class:97.62"
 File[23]=".src/Form/Chains.form"
 File[24]=".src/Form/Chains.class:28.2"
-Count=24
+File[25]="backpanel.png"
+Count=25
 
 [Watches]
 Count=11
