--- a/.settings
+++ b/.settings
@@ -731,8 +731,7 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-Active=4
-File[4]=".src/Form/FMain.class:7791.0"
+File[4]=".src/Form/FMain.class:8.92"
 File[5]=".src/Classi/MplayerClass.class:1052.22"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
@@ -749,12 +748,14 @@ File[17]=".src/Form/DVBTuner.form"
 File[18]=".src/Form/GeneralOptions.form"
 File[19]=".src/Form/CountDown.class:24.17"
 File[20]=".src/Classi/PlaylistClass.class:1378.22"
+Active=21
 File[21]=".src/Form/SubAndOsd.form"
-File[22]=".src/Form/SubAndOsd.class:97.62"
+File[22]=".src/Form/SubAndOsd.class:286.3"
 File[23]=".src/Form/Chains.form"
 File[24]=".src/Form/Chains.class:28.2"
 File[25]="backpanel.png"
-Count=25
+File[26]=".src/Form/ServiceForm.form"
+Count=26
 
 [Watches]
 Count=11
