--- a/.settings
+++ b/.settings
@@ -1,5 +1,5 @@
 [Breakpoints]
-Breakpoint[1]="FMain.7518"
+Breakpoint[1]="FMain.7535"
 Count=1
 
 [DebugWindow]
@@ -539,6 +539,9 @@ Geometry=[0,0,344,344]
 [DebugWindow/mplayer.MediaHeaders]
 Geometry=[0,0,344,344]
 
+[DebugWindow/mplayer.cddbtracks]
+Geometry=[48,-4,410,672]
+
 [DebugWindow/mycombobox]
 Geometry=[0,0,344,344]
 
@@ -638,6 +641,12 @@ Geometry=[0,404,301,301]
 [DebugWindow/ptable]
 Geometry=[0,0,857,540]
 
+[DebugWindow/querymp.MediaHeaders]
+Geometry=[48,-4,749,827]
+
+[DebugWindow/querymp.cddbtracks]
+Geometry=[48,-4,406,660]
+
 [DebugWindow/quickcheckbox]
 Geometry=[0,0,301,301]
 
@@ -731,31 +740,35 @@ SearchString=True
 File[1]=".src/Form/XConfigureAudioDriver.form"
 File[2]=".src/Form/XConfigureAudioDriver.class:286.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:5084.41"
-File[5]=".src/Classi/MplayerClass.class:1122.2"
+File[4]=".src/Form/FMain.class:2598.47"
+File[5]=".src/Classi/MplayerClass.class:198.25"
 File[6]=".src/Form/RealtimeForm.form"
 File[7]=".src/Form/AudioEqualizer.form"
 File[8]=".src/Form/VideoEqualizer.form"
 File[9]=".src/Form/VideoEqualizer.class:13.15"
 File[10]=".src/Form/HotKeys.form"
 Active=11
-File[11]="CHANGELOG_GIT:3.10"
-File[12]="AA_ToDo:63.47"
-File[13]=".src/0_Moduli/Global.module:203.15"
-File[14]=".src/Form/GeneralOptions.class:65.2"
+File[11]="CHANGELOG_GIT:3.0"
+File[12]="AA_ToDo:58.54"
+File[13]=".src/0_Moduli/Global.module:165.10"
+File[14]=".src/Form/GeneralOptions.class:3.19"
 File[15]=".src/Classi/DbusProperties.class:395.3"
 File[16]=".src/Classi/mpris.class:65.13"
 File[17]=".src/Form/DVBTuner.form"
 File[18]=".src/Form/GeneralOptions.form"
 File[19]=".src/Form/CountDown.class:24.17"
-File[20]=".src/Classi/PlaylistClass.class:1378.22"
+File[20]=".src/Classi/PlaylistClass.class:42.0"
 File[21]=".src/Form/SubAndOsd.form"
 File[22]=".src/Form/SubAndOsd.class:123.0"
 File[23]=".src/Form/Chains.form"
 File[24]=".src/Form/Chains.class:28.2"
 File[25]="backpanel.png"
 File[26]=".src/Form/ServiceForm.form"
-Count=26
+File[27]=".src/Form/AudioForm.class:102.7"
+File[28]=".src/Classi/Meters.class:61.0"
+File[29]=".src/Form/CoverManager.class:265.20"
+File[30]=".src/Form/AudioForm.form"
+Count=30
 
 [Watches]
 Count=11
